--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ add_library(gfx STATIC
 
 target_include_directories(gfx PUBLIC
   "."
-  "${SDL2_INCLUDE_DIR}"
+  "${SDL2_INCLUDE_DIRS}"
   "${CMAKE_SOURCE_DIR}/build/_deps/glm-src"
   "${CMAKE_SOURCE_DIR}/build/_deps/glew-src/include"
 )
