--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ find_package(OpenGL REQUIRED)
 
 FetchContent_Declare(
     glm GIT_REPOSITORY https://github.com/g-truc/glm.git
+    GIT_TAG 33b0eb9fa336ffd8551024b1d2690e418014553b # v1.0.0
 )
 FetchContent_MakeAvailable(glm)
 
